@@ -41,6 +41,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
     implementation 'commons-io:commons-io:2.6'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
     implementation 'com.google.api-client:google-api-client:2.2.0'
     implementation 'com.google.api-client:google-api-client-jackson2:1.20.0'
 }
@@ -62,7 +64,17 @@ repositories {
     mavenCentral()
 }
 
-
+test {
+    useJUnitPlatform()
+    jvmArgs = [
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "-javaagent:${classpath.find { it.name.contains("byte-buddy-agent") }.absolutePath}",
+            "-XX:+EnableDynamicAgentLoading"
+    ]
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
 tasks.named('test') {
     useJUnitPlatform()
 }
